@@ -1,0 +1,13 @@
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
+The current pixel depth returned by window.screen.pixelDepth is:
+<script>
+document.write(window.screen.pixelDepth);
+</script>
+<br>
+The current color depth returned by window.screen.colorDepth is:
+<script>
+document.write(window.screen.colorDepth);
+</script>
