@@ -1,3 +1,13 @@
+2006-06-01  David Carson  <dacarson@gmail.com>
+        
+        Reviewed by Hyatt
+        
+        Tests for http://bugzilla.opendarwin.org/show_bug.cgi?id=8646
+        Test the window.screen.pixelDepth and window.screen.colorDepth
+        
+        * fast/dom/window/window-screen-properties.html: Added
+        * fast/dom/window/window-screen-properties-expected.txt: Added.
+
 2006-06-01  Geoffrey Garen  <ggaren@apple.com>
 
         - Test for http://bugzilla.opendarwin.org/show_bug.cgi?id=9113
